k8s/gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: warden-gateway
  namespace: warden
spec:
  selector:
    app: warden-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
