k8s/gateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warden-gateway
  namespace: warden
  annotations:
    nginx.ingress.kubernetes.io/load-balance: "ewma"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: gateway.warden.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: warden-gateway
                port:
                  number: 8080
